--- a/modules/core/config.default.yml
+++ b/modules/core/config.default.yml
@@ -1,27 +1,40 @@
-debug:2
-title:Мой первый сайт
-
-description:|
-    Описание моего первого сайта
-    
-keywords:|
-    ключ, слово, первый сайт
-    
-users:
-    admin:admin
-
-database:
-    host:	    localhost
-    user:       root
-    password:    
-    name:       cakelibe
-
-ftp:
-    active:	    no
-    host:	    localhost
-    user:	    guest
-    password:
-    
-modules:
-    core:1.0.1
-    blog:1.0.1
+---
+database: 
+  host: localhost
+  user: root
+  password: password
+  name: episode
+ftp: 
+  active: false
+  host: localhost
+  user: guest
+  password: 
+modules: 
+  core: 
+    @version: 1.0.1
+    title: EpisodeCMS
+    divider: ' - '
+    description: Content Management System
+    keywords: >
+      EpisodeCMS, CakePHP, CMS, freeware,
+      open-source, download, php
+    demo: true
+    maintance: false
+  gallery: 1.0.1
+  dev: 1.0.1
+  blog: 1.0.1
+frontend: 
+  theme: default
+backend: 
+  theme: _classic
+menus: 
+  main: 
+    Home: 
+      @link: /
+    Blog: 
+      @link: /blog/
+    Portfolio: 
+      @link: /portfolio/
+    About: 
+      @link: /page/about
+admin-language: eng
