--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Wed Nov 10 14:19:43 EET 2010
+#Thu Nov 18 16:42:12 EET 2010
 eclipse.preferences.version=1
-include_path=0;/directive
+include_path=0;/episode
