--- a/projects/cook2.me/project.yml
+++ b/projects/cook2.me/project.yml
@@ -5,10 +5,10 @@ maintance: 0
 modules:
   blog: 1.0.1
 routes:
-    /:
-        controller:viewer
-        action:index
-        model:post
-        pass:[model]
+  /:
+    controller: viewer
+    action: index
+    model: recipe
+    pass: [model]
 styles:
   -admin
