Translations change. Usability improvements.

--- a/config.yml
+++ b/config.yml
@@ -10,6 +10,7 @@ modules:
   cook2.me: 0
   core: 1
   recipes: 1.0.1
+  Directive: 1.0.1
 title: cook2.me
 description: >
   Кулинарная
@@ -23,6 +24,21 @@ routes:
     model: recipe
     pass: 
       - model
+  "/project/:slug": 
+    controller: directive
+    action: view
+    pass: 
+      - slug
+    slug: '[^/]+'
+  "/project/:slug:/edit": 
+    controller: directive
+    action: edit
+    pass: 
+      - slug
+    slug: '[^/]+'
+  /admin/directive: 
+    controller: directive
+    action: admin_browse
 styles: 
   - admin
 version: 0
@@ -30,3 +46,10 @@ admin-language: rus
 theme: default
 theme_path: >
   /var/www/public/cake2-me.episodecms.com/projects/cook2.me/themes/default
+content: '* Manage your project, resource and tasks'
+admin: 
+  Content: 
+    Directive: 
+      _link: 
+        controller: directive
+        action: admin_browse
