--- a/modules/core/themes/default/theme.yml
+++ b/modules/core/themes/default/theme.yml
@@ -1,9 +1,9 @@
 title: Default
-author: Aleksey Razbakov
-authorEmail: razbakov.aleksey@gmail.com
+authors: Aleksey Razbakov
 date: 12.07.2010
-description:|
-    Some description
-menus:
-    main:Main Menu
-    usefull:Usefull Links        
+description: |
+  Default Theme
+menu:
+  main:
+    Home:
+      _link: /
