--- a/projects/cook2.me/themes/default/theme.yml
+++ b/projects/cook2.me/themes/default/theme.yml
@@ -27,7 +27,11 @@ menu:
     Добавить рецепт:
       _link: /recipes/edit
       _image: navigate/7.png
+    Blog: x
+  user:
+    _title: Меню пользователя
   footer:
+    _title: Дополнительная информация
     Правила:
       _link: /pages/rules
     Рекламодателям:
