--- a/modules/dev/module.yml
+++ b/modules/dev/module.yml
@@ -3,10 +3,18 @@ version: 1.0.1
 description: |
   Developer Pack designed for quick deploying modules for web applications.
 routes:
-    /admin/dev/:
-        controller: dev
-        action: index
-install:
-  method: /dev/install
-uninstall:
-  method: /dev/uninstall
+  /admin/editor:
+    _title: Site Editor
+    controller: editor
+    action: index
+widgets:
+  editor:
+    sitemap:
+      _title: Site Navigation
+ui:
+  admin:
+    notifications:
+      */*:
+        sitemap:
+          _title: Site Navigation
+          _before: *
