--- a/modules/core/module.yml
+++ b/modules/core/module.yml
@@ -26,7 +26,7 @@ options:
   maintance: bool
 ui:
   admin:
-    _title: Control Panel
+    _title: Backend
     _theme: _classic
   main:
     _title: Frontend
