--- a/projects/cook2.me/project.yml
+++ b/projects/cook2.me/project.yml
@@ -1,12 +1,21 @@
+---
+debug: 4
+modules: 
+  blog: 1.0.1
+  dev: 1.0.1
 title: cook2.me
-description: Кулинарная социальная сеть
-keywords:
-maintance: 0
-routes:
-  /:
+description: >
+  Кулинарная
+  социальная сеть
+keywords: 
+routes: 
+  /: 
     controller: viewer
     action: index
     model: recipe
-    pass: [model]
-styles:
-  -admin
+    pass: 
+      - model
+version: 0
+theme: default
+theme_path: >
+  /var/www/public/cake2-me.episodecms.com/projects/cook2.me/themes/default
