--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,6 @@
     RewriteEngine On
 
     RewriteCond %{REQUEST_FILENAME} -f
-    RewriteRule ^(.*(html|js|css|png|jpg|htm|gif)|public\/.*)$ $1 [L] 
-    RewriteRule ^robots.txt$ $1 [L] 
+    RewriteRule ^(.*(html|js|txt|css|png|jpg|htm|gif)|public\/.*)$ $1 [L] 
     RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
 </IfModule>
