--- a/modules/core/module.yml
+++ b/modules/core/module.yml
@@ -6,28 +6,26 @@ content: |
   * Change appearence with "themes":/controller:admin/action:themes/ and "describe navigation":/controller:admin/action:menus/
   * Manage site by "adding page":/controller:admin/action:edit/module:core/model:Page/ and "browse pages":/controller:admin/action:browse/module:core/model:Page/
   * Find out "users":/controller:admin/action:browse/module:core/model:User/ 
-scripts:
-  -jquery
-  -jquery-ui/jquery-ui
-  -jquery.quicksearch
-  -jquery.synctranslit
-  -jquery.promo-slider
-  -jquery.right-click
-  -tinymce/jquery.tinymce
-  -ajaxupload
-  -jquery.autocompleter
-styles:
-  -jquery-ui/smoothness/jquery-ui-1.8.2.custom
-  -ui
 options:
-  title: string
-  description: text
-  keywords: text
   maintance: bool
 ui:
   admin:
-    _title: Backend
+    _title: Control Panel
     _theme: _classic
+    _js:
+      -jquery
+      -jquery-ui/jquery-ui
+      -jquery.quicksearch
+      -jquery.synctranslit
+      -jquery.promo-slider
+      -jquery.right-click
+      -tinymce/jquery.tinymce
+      -ajaxupload
+      -jquery.autocompleter
+      -core
+    _css:
+      -jquery-ui/smoothness/jquery-ui-1.8.2.custom
+      -ui
   main:
     _title: Frontend
     _theme: default
