--- a/modules/core/module.yml
+++ b/modules/core/module.yml
@@ -48,7 +48,7 @@ actions:
 routes:
   /:
     controller: viewer
-    action: blank
+    action: home
   /login:
     controller: users
     action: login
