--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,6 @@
 project: cook2.me
 database: 
   host: localhost
-  database: test
+  database: episode
   login: root
-  password: password
-debug: 4
+  password: 123123
