--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,8 @@
 ---
-debug: 4
 project: cook2.me
+debug: 4
 database: 
   host: localhost
-  database: episode
+  database: site
   login: root
-  password: 123123
+  password: password
