--- a/modules/portfolio/module.yml
+++ b/modules/portfolio/module.yml
@@ -1,5 +1,15 @@
-title: Portfolio
-version: 1.0.1
+intro:
+  version: 1.0.1
+  eng:
+    title: Portfolio
+    description: Self promotion - portfolios and works
+    authors:
+      - Aleksey Razbakov <razbakov.aleksey@gmail.com>
+  rus:
+    title: Портфолио
+    description: Самореклама - портфолио и работы
+    authors:
+      - Алексей Разбаков <razbakov.aleksey@gmail.com>
 routes:
   /portfolios:
     controller: viewer
