--- a/projects/cook2.me/project.yml
+++ b/projects/cook2.me/project.yml
@@ -1,11 +1,14 @@
 ---
-debug: 4
 setup: false
 modules: 
   blog: 1.0.1
   dev: 1.0.1
   recipes: 1.0.1
   wiki: 1.0.1
+  banners: 
+  portfolio: 
+  translations: 
+debug: 4
 title: cook2.me
 description: >
   Кулинарная
