Changed EpisodeCMS project config.

--- a/projects/EpisodeCMS/themes/default/theme.yml
+++ b/projects/EpisodeCMS/themes/default/theme.yml
@@ -1,8 +1,13 @@
-title: EpisodeCMS
-authors:
-  -
-    name: Aleksey Razbakov
-    email: razbakov.aleksey@gmail.com
-date: 15.03.2011
-description: |
-    EpisodeCMS official site default theme.
+menu:
+  main:
+    _title: Главное меню
+    Обзор:
+      _link: /
+    Модули:
+      _link: /modules
+    Документация:
+      _link: /documentation
+    Скачать:
+      _link: /download
+  submenu:
+    _title: Дополнительное меню
