--- a/projects/empty/project.yml
+++ b/projects/empty/project.yml
@@ -3,10 +3,11 @@ setup: false
 modules: 
   blog: 1.0.1
   dev: 1.0.1
+  portfolio: 1.0.1
+  newsletter: 
 title: empty
 description: empty project
-content: '* empty project'
 version: 0
 theme: default
 theme_path: >
-  C:\projects\episode\modules\core\themes\default
+  /var/www/episode/modules/core/themes/default
